More links in HTML

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
         <div id="footer">
             <div class="container">
-                <p class="text-muted">Proudly presented by <a href="https://www.coredump.ch/">coredump Rapperswil</a>.</p>
+                <p class="text-muted">Proudly presented by <a href="https://www.coredump.ch/2013/10/11/ein-hackerspace-fuer-rapperswil/">coredump Rapperswil</a>. Powered by an <a href="http://www.epson.com/cgi-bin/Store/ProductQuickSpec.jsp?infoType=Specs&oid=10526">Epson LX300+</a> impact printer and a <a href="http://www.raspberrypi.org/faqs">Raspberry Pi</a> computer.</p>
             </div>
         </div>
 
