--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="page-header">
-        <h1>linedump</h1>
+        <h1>Linedump</h1>
     </div>
     <p class="lead">Fülle
     <a href="http://images2.wikia.nocookie.net/__cb20081222171126/uncyclopedia/images/9/91/Loooooooooooooooooooooooooooooooooooooooooongcat.JPG">Longcat</a>
